<resources>
    <string name="app_name">ImBoard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_text"><![CDATA[< Back]]></string>
    <string name="required">Required</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_in">Log - In</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login:</string>
    <string name="lobby_s_name">Lobby`s name</string>
    <string name="players_n2_4">Players :\n2/4</string>
    <string name="game_name">Game Name</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="join">Join</string>
    <string name="all_lobbies">All lobbies</string>
    <string name="nickname">Nickname</string>
    <string name="upload_photo">Upload photo</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="submit">Submit</string>
    <string name="create_new_lobby">Create new lobby</string>
    <string name="lobby_name">Lobby Name</string>
    <string name="time">Time</string>
    <string name="have_the_game">Have The Game</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="item_added">lobby added!</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="term_and_conditions_string">This work belongs to Liad, Ofek, Yanir. Don\'t steal our idea!</string>
    <string name="registeration_successful">Registration successful</string>
    <string name="please_check_term_and_conditions">Please check Terms and Conditions box</string>
    <string name="minimum_3_char">Minimum 3 Character Nickname</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="must_contaion_1_lower_case">Must Contain 1 Lower-case Character</string>
    <string name="must_contaion_1_upper_case">Must Contain 1 Upper-case Character</string>
    <string name="minimun_8_char">Minimum 8 Character Password</string>
    <string name="empty_email_or_username_or_password">Empty username or email or password</string>
    <string name="please_fill_entire_form">Please fill the entire form</string>
    <string name="login_successful">Login successful</string>
    <string name="leave">Leave</string>
    <string name="lobby_full">Lobby full</string>
    <string name="players">Players</string>
    <string name="invalid_form">invalid form</string>
    <string name="okay">Okay</string>
    <string name="about">About</string>
</resources>