<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lobby_screen_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.lobby_screen.LobbyScreen">


    <TextView
        android:id="@+id/lobby_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/lobby_s_name"
        android:textColor="@color/teal_700"
        android:textSize="24sp" />

        <ImageView
            android:id="@+id/lobby_game_icon"
            android:layout_width="120dp"
            android:layout_marginTop="10dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:id="@+id/lobby_infoLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lobby_player_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:gravity="center"
                android:lines="2"
                android:text="@string/players_n2_4" />

            <TextView
                android:id="@+id/lobby_game_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/game_name"
                android:textSize="20sp"
                android:textStyle="bold"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/account_recycler"
        android:layout_width="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_height="wrap_content">



    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:gravity="bottom|center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/lobby_location_lobby_room"
            android:textSize="20sp"
            android:text="@string/location"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/lobby_date_lobby_room"
            android:textSize="20sp"
            android:text="@string/date"/>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/join"
        android:id="@+id/join_lobby_btn"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:id="@+id/progress_bar" />

</LinearLayout>