<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/account_profile_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp">


            <LinearLayout
                android:id="@+id/account_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center|start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/account_profile_photo"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:padding="10dp"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/account_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:gravity="center"
                        android:textColor="@color/teal_700"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/account_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:gravity="center"
                        android:textColor="@color/teal_700"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/about"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/terms_and_condition_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:text="@string/terms_and_conditions"
            android:textAllCaps="false"
            android:textColor="@color/teal_700"
            android:textSize="14sp"
            android:textStyle="italic"
            app:icon="@drawable/ic_baseline_chat_24"
            app:iconTint="@color/teal_700" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_out_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="italic"
            app:icon="@drawable/ic_baseline_logout_24"
            app:iconTint="@color/red" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/account_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />

</FrameLayout>